[package]
name = "whoami-bug"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whoami = "1.1.2"

# This patch adds a check for the return value of getpwuid_r.
# [patch.crates-io]
# whoami = { git = "https://github.com/adeschamps/whoami", rev = "c8cf78f" }
